--- a/css/style.css
+++ b/css/style.css
@@ -10219,6 +10219,14 @@ nav ul li a:hover {
   height: auto;
 }
 
+.mainerror {
+  background-position: center center;
+  background-image: url(../img/404.jpg);
+  background-size: cover;
+  width: 100%;
+  height: 150vh;
+}
+
 .parrafo {
   width: auto;
   height: auto;
