--- a/scss/general/_contenido.scss
+++ b/scss/general/_contenido.scss
@@ -56,9 +56,13 @@
     height: auto;
 }
 
-
-
-
+.mainerror{
+    background-position: center center;
+    background-image: url(../img/404.jpg);
+    background-size:cover;
+    width: 100%;
+    height: 150vh;
+}
 
 .parrafo{
     width:auto;
