--- a/scss/general/_contenido.scss
+++ b/scss/general/_contenido.scss
@@ -61,26 +61,24 @@
     background-image: url(../img/404.jpg);
     background-size:cover;
     width: 100%;
-    height: 150vh;
+    height: 80vh;
+    display:block;
 }
 
 .parrafo{
     width:auto;
     height: auto;
     background-color: rgba(255, 255, 255, 0.726);
-    font-size: 100%;
     font-family: 'Courier New', Courier, monospace;
-    padding: 10px 10px 5px 10px;
+    padding: 15px 15px 15px 15px;
     border-radius: 8px;
-    margin-block-start: 10px;
+    margin-block-start: 20%;
     margin-left: 50px;
     margin-right: 50px;
 }
 
 P{
     font-family: 'Raleway', sans-serif;
-    color: rgb(8, 8, 8);
-    font-size: 0.9rem;
     width:auto;
     height: auto;
 }
@@ -103,9 +101,6 @@ p {
     }
 }
 
-/************** FIN DE PAGINA INDEX************/
-
-
 /*********************PAGINA MULTIMEDIA*****************/
 
 .center {
@@ -127,7 +122,7 @@ p {
 
 
 /*********************PAGINA CONTACTO **********/
-/* formulario*/
+
 
 .formulario{
     width: 60%;
@@ -143,14 +138,6 @@ p {
 label{
     font-size: 0.8rem;
 }
-/* fin de formulario*/
+
 /*********************FIN DE PAGINA CONTACTO **********/
-
-/*fin de pagina de contacto*/
-
-
-/*****************este es mi footer************/
-
-
-/******************fin de footer***********************/
 
